--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
