--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
+    "pdfjs-dist": "^4.9.155",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
